Update Airline Delays, 2014-2018.ipynb

--- a/summer-delays-nyc/Airline Delays, 2014-2018.ipynb
+++ b/summer-delays-nyc/Airline Delays, 2014-2018.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -33,11 +33,10 @@
      "output_type": "stream",
      "text": [
       "Airline Delays, 2014-2018.ipynb junedelays.xlsx\r\n",
-      "airline_delay_causes.csv        newarkarrival.pdf\r\n",
-      "delays2018.pdf                  newarkdelayed.pdf\r\n",
-      "delaysheatmapsample.pdf         newarkjune.pdf\r\n",
-      "delaysheatmapseasons.pdf        slope.pdf\r\n",
-      "dumbbell.csv                    worstairlines2018.pdf\r\n"
+      "airline_delay_causes.csv        \u001b[31msimple.html\u001b[m\u001b[m\r\n",
+      "flightdelays.csv                \u001b[34mstyles\u001b[m\u001b[m\r\n",
+      "\u001b[34mimages\u001b[m\u001b[m                          templates copy.ai\r\n",
+      "\u001b[31mindex.html\u001b[m\u001b[m\r\n"
      ]
     }
    ],
@@ -47,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +97,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1807,7 +1806,7 @@
        "[100 rows x 19 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1818,7 +1817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1827,7 +1826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1836,7 +1835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1845,7 +1844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2041,7 +2040,7 @@
        "1162     1909.0             0.0               1635.0  winter  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2052,14 +2051,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "JetBlue Airways             180\n",
        "Delta Air Lines Inc.        180\n",
+       "JetBlue Airways             180\n",
        "American Airlines Inc.      180\n",
        "United Air Lines Inc.       142\n",
        "ExpressJet Airlines Inc.    131\n",
@@ -2072,7 +2071,7 @@
        "Name: carrier_name, dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2097,7 +2096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2106,7 +2105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2115,7 +2114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2129,7 +2128,7 @@
        "Name: year, dtype: int64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2140,7 +2139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2291,7 +2290,7 @@
        "2018   30.108295  29.203772  25.813449  23.281667  28.267836  27.090787  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2302,28 +2301,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([<matplotlib.axis.XTick at 0x116bfd518>,\n",
-       "  <matplotlib.axis.XTick at 0x116b70e80>,\n",
-       "  <matplotlib.axis.XTick at 0x116b70be0>,\n",
-       "  <matplotlib.axis.XTick at 0x116f68630>,\n",
-       "  <matplotlib.axis.XTick at 0x116f72400>,\n",
-       "  <matplotlib.axis.XTick at 0x116f72cf8>,\n",
-       "  <matplotlib.axis.XTick at 0x116f7a2b0>,\n",
-       "  <matplotlib.axis.XTick at 0x116f7a828>,\n",
-       "  <matplotlib.axis.XTick at 0x116f7ada0>,\n",
-       "  <matplotlib.axis.XTick at 0x116f80358>,\n",
-       "  <matplotlib.axis.XTick at 0x116f808d0>,\n",
-       "  <matplotlib.axis.XTick at 0x116f80e48>],\n",
+       "([<matplotlib.axis.XTick at 0x11a7fcb00>,\n",
+       "  <matplotlib.axis.XTick at 0x11a7fc438>,\n",
+       "  <matplotlib.axis.XTick at 0x11a7fc2e8>,\n",
+       "  <matplotlib.axis.XTick at 0x11ad02a20>,\n",
+       "  <matplotlib.axis.XTick at 0x11ad02f28>,\n",
+       "  <matplotlib.axis.XTick at 0x11ad074e0>,\n",
+       "  <matplotlib.axis.XTick at 0x11ad07a58>,\n",
+       "  <matplotlib.axis.XTick at 0x11ad07ba8>,\n",
+       "  <matplotlib.axis.XTick at 0x11ad0e588>,\n",
+       "  <matplotlib.axis.XTick at 0x11ad0eb00>,\n",
+       "  <matplotlib.axis.XTick at 0x11ad0e630>,\n",
+       "  <matplotlib.axis.XTick at 0x11ad07a20>],\n",
        " <a list of 12 Text xticklabel objects>)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2356,7 +2355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2561,7 +2560,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2572,7 +2571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2581,20 +2580,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([<matplotlib.axis.XTick at 0x117186240>,\n",
-       "  <matplotlib.axis.XTick at 0x11717f7b8>,\n",
-       "  <matplotlib.axis.XTick at 0x11717fa58>,\n",
-       "  <matplotlib.axis.XTick at 0x1171f3f98>],\n",
+       "([<matplotlib.axis.XTick at 0x11adbb908>,\n",
+       "  <matplotlib.axis.XTick at 0x11adbb240>,\n",
+       "  <matplotlib.axis.XTick at 0x11ad4d2b0>,\n",
+       "  <matplotlib.axis.XTick at 0x11adf28d0>],\n",
        " <a list of 4 Text xticklabel objects>)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2634,7 +2633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2643,7 +2642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2848,7 +2847,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2859,7 +2858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2872,7 +2871,7 @@
        "Name: arr_delay, dtype: float64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2890,7 +2889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2899,7 +2898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2908,7 +2907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2917,7 +2916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2990,7 +2989,7 @@
        "5         8523.0      36468.0"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3001,7 +3000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3010,7 +3009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3019,27 +3018,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_seasons.to_csv('flightdelays.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.axis.XTick at 0x117bc29e8>,\n",
-       " <matplotlib.axis.XTick at 0x117bc2320>,\n",
-       " <matplotlib.axis.XTick at 0x117c03dd8>,\n",
-       " <matplotlib.axis.XTick at 0x117c13400>,\n",
-       " <matplotlib.axis.XTick at 0x117c13b00>,\n",
-       " <matplotlib.axis.XTick at 0x117c240b8>,\n",
-       " <matplotlib.axis.XTick at 0x117c245c0>,\n",
-       " <matplotlib.axis.XTick at 0x117c24b38>,\n",
-       " <matplotlib.axis.XTick at 0x117c29160>,\n",
-       " <matplotlib.axis.XTick at 0x117bc21d0>,\n",
-       " <matplotlib.axis.XTick at 0x117c38828>,\n",
-       " <matplotlib.axis.XTick at 0x117c38d30>]"
+       "[<matplotlib.axis.XTick at 0x11ae3b3c8>,\n",
+       " <matplotlib.axis.XTick at 0x11ae34cc0>,\n",
+       " <matplotlib.axis.XTick at 0x11ae83c18>,\n",
+       " <matplotlib.axis.XTick at 0x11ae97208>,\n",
+       " <matplotlib.axis.XTick at 0x11ae97668>,\n",
+       " <matplotlib.axis.XTick at 0x11ae97b70>,\n",
+       " <matplotlib.axis.XTick at 0x11ae9d160>,\n",
+       " <matplotlib.axis.XTick at 0x11ae9d6a0>,\n",
+       " <matplotlib.axis.XTick at 0x11ae9dc18>,\n",
+       " <matplotlib.axis.XTick at 0x11ae34a20>,\n",
+       " <matplotlib.axis.XTick at 0x11aeb24e0>,\n",
+       " <matplotlib.axis.XTick at 0x11aeb29e8>]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3078,7 +3086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3087,7 +3095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -3292,7 +3300,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3303,7 +3311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3312,7 +3320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3321,7 +3329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -3332,7 +3340,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3350,7 +3358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -3388,7 +3396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3397,7 +3405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3406,7 +3414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3415,7 +3423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3424,7 +3432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -3616,7 +3624,7 @@
        "9                          9696     NWR  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3627,7 +3635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -3655,7 +3663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -3691,7 +3699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3700,7 +3708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -3905,7 +3913,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3916,7 +3924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3925,7 +3933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3934,7 +3942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3943,7 +3951,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slopegraph.to_csv('slopegraph.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -4016,7 +4033,7 @@
        "4       Endeavor Air Inc.  2018     23.195005"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4024,6 +4041,22 @@
    "source": [
     "slopegraph.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slopegraph['difference'] = slopegraph[ratio_delays]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
