--- a/federal-district-judges/Federal Courts Part 3.ipynb
+++ b/federal-district-judges/Federal Courts Part 3.ipynb
@@ -36,7 +36,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -5178,6 +5180,62 @@
     "#geojson output\n",
     "with open('geo-data.js', 'a') as outfile:\n",
     "    json.dump(geo_format, outfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'var infoData = {\"type\": \"FeatureCollecti'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "contents = open('geo-data-original.js').read()\n",
+    "contents[:40]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remove var infoData =, save as geojson\n",
+    "geojson = contents[15:]\n",
+    "with open('geo-data.geojson', 'w') as outfile:\n",
+    "    outfile.write(geojson)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Upload to mapshaper, simplify to like 2%\n",
+    "# , then export as geojson again\n",
+    "# then we'll add var infoData = back to it\n",
+    "# and save it as geo-data.js\n",
+    "geojson = open('geo-data-from-mapshaper.json').read()\n",
+    "geojson_as_js = 'var infoData = ' + geojson\n",
+    "with open('geo-data.js', 'w') as outfile:\n",
+    "    outfile.write(geojson_as_js)"
    ]
   },
   {
